// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconAffix /> renders after 1`] = `
<div
  className="affix-0-2-1 affix_after-0-2-2"
>
  Child
</div>
`;

exports[`<IconAffix /> renders before 1`] = `
<div
  className="affix-0-2-1 affix_before-0-2-3"
>
  Child
</div>
`;
